--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -46,7 +46,7 @@
             width: 300px;
             height: 300px;
             border-radius: 100%;
-            background-image: url('https://plus.unsplash.com/premium_photo-1675188410128-08479b027489?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Y2F0fGVufDB8fDB8fHww');
+            background-image: url('https://scontent.fcnx2-1.fna.fbcdn.net/v/t1.6435-1/78617327_2499190463741795_7379719263046598656_n.jpg?stp=dst-jpg_s320x320&_nc_cat=111&ccb=1-7&_nc_sid=2b6aad&_nc_eui2=AeE-sCofS-hMg77qlCUcD4p5eUmFnTup-ol5SYWdO6n6iRkv4rUsuxI_1a7TQliZTT8ixkWy4V7Dwlu-i7GBxM-s&_nc_ohc=czrYtO0DIBUAX9CQikQ&_nc_ht=scontent.fcnx2-1.fna&oh=00_AfB54uDMmihKAYJIS-YxMlW7If24kCJhBTDuHUq-sla1Bg&oe=660D18CD');
             background-size: cover;
             background-position: center;
             margin-right: 120px;
