--- a/src/components/Number/Number.module.css
+++ b/src/components/Number/Number.module.css
@@ -1,6 +1,6 @@
 .number_con {
     height: 300px;
-    background-color: #8d38c9;
+    background-color: #c55d80;
     display: flex;
     justify-content: center;
     align-items: center;
