--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -33,24 +33,43 @@
         margin-top: 25px;
 
         & li {
-            margin-right: 10px;
+          margin-right: 10px;
 
-            & svg {
-                width: 32px;
-                height: 32px;
-            }
+          & svg {
+            width: 32px;
+            height: 32px;
+          }
         }
       }
 
-        & .hero_image {
-            width: 300px;
-            height: 300px;
-            border-radius: 100%;
-            background-image: url('https://scontent.fcnx2-1.fna.fbcdn.net/v/t1.6435-1/78617327_2499190463741795_7379719263046598656_n.jpg?stp=dst-jpg_s320x320&_nc_cat=111&ccb=1-7&_nc_sid=2b6aad&_nc_eui2=AeE-sCofS-hMg77qlCUcD4p5eUmFnTup-ol5SYWdO6n6iRkv4rUsuxI_1a7TQliZTT8ixkWy4V7Dwlu-i7GBxM-s&_nc_ohc=czrYtO0DIBUAX9CQikQ&_nc_ht=scontent.fcnx2-1.fna&oh=00_AfB54uDMmihKAYJIS-YxMlW7If24kCJhBTDuHUq-sla1Bg&oe=660D18CD');
-            background-size: cover;
-            background-position: center;
-            margin-right: 120px;
-        }
+      & .hero_image {
+        width: 300px;
+        height: 300px;
+        border-radius: 100%;
+        background-image: url("https://scontent.fcnx2-1.fna.fbcdn.net/v/t1.6435-1/78617327_2499190463741795_7379719263046598656_n.jpg?stp=dst-jpg_s320x320&_nc_cat=111&ccb=1-7&_nc_sid=2b6aad&_nc_eui2=AeE-sCofS-hMg77qlCUcD4p5eUmFnTup-ol5SYWdO6n6iRkv4rUsuxI_1a7TQliZTT8ixkWy4V7Dwlu-i7GBxM-s&_nc_ohc=czrYtO0DIBUAX9CQikQ&_nc_ht=scontent.fcnx2-1.fna&oh=00_AfCZ8lOaougW9Uvb672BCQ6JivDNUdGTywp04neMHtli1g&oe=660D510D");
+        background-size: cover;
+        background-position: center;
+        margin-right: 120px;
+      }
     }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .hero_wrapper {
+    height: auto;
+
+    & .hero_content {
+      flex-direction: column;
+      margin: 50px 0;
+      padding: 20px;
+
+      & .hero_info, & .hero_image {
+        width: 100%;
+      }
+
+    }
+
+   
   }
 }
