--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,40 +1,129 @@
-nav{
+nav {
     background-color: #c55d80;
-}
-nav a{
-    color: rgb(235, 235, 235);
-    text-decoration: none;
-
-}
-nav .container{
-    max-width: 1170px;
-    margin: 0 auto;
-}
-nav .nav_con{
-    height: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 10px;
-}
-nav .nav_con ul{
-    display: flex;
-    list-style: none;
-}
-nav .nav_con ul li{
-    margin: 0 35px;
-}
-nav .button{
-    width: 100px;
-    height: 35px;
-    background-color: rgb(189, 157, 207);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    transition: 0.3s;
-    cursor: pointer;
-}
-nav .button :hover{
-    box-shadow: 0 0 20px 0px rgba(0, 0, 0, alpha);
-}
+    overflow: hidden;
+    position: relative;
+  
+    & a {
+      color: white;
+    }
+  
+    .bars {
+      position: absolute;
+      top: 45px;
+      right: 20px;
+      color: white;
+    }
+  
+    & .container {
+      max-width: 1170px;
+      margin: 0 auto;
+    }
+  
+    & .nav_con {
+      height: 60px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+  
+      & .logo {
+        & a {
+          text-decoration: none;
+          font-weight: bold;
+        }
+      }
+  
+      & ul {
+        display: flex;
+        list-style: none;
+  
+        & li {
+          margin: 0 35px;
+  
+          & a {
+            text-decoration: none;
+          }
+        }
+      }
+  
+      & .button {
+        width: 100px;
+        height: 35px;
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 20px;
+        transition: 0.3s;
+        cursor: pointer;
+  
+        &:hover {
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+        }
+  
+        a {
+          text-decoration: none;
+          color: #c55d80;
+          font-weight: bold;
+        }
+      }
+    }
+  }
+  
+  @media screen and (max-width: 480px) {
+    .nav_con {
+      flex-direction: column;
+      height: auto !important;
+      margin: 50px 0;
+      align-items: start !important;
+      margin-left: 30px;
+  
+      & ul {
+        display: none !important;
+      }
+  
+      & .button {
+        display: none !important;
+      }
+    }
+  
+    .mobile_menu {
+      list-style: none;
+      & li {
+        margin: 35px;
+  
+        & a {
+          text-decoration: none;
+        }
+      }
+    }
+  
+    & .mobile_button {
+      width: 100px;
+      height: 35px;
+      background-color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 20px;
+      transition: 0.3s;
+      cursor: pointer;
+      margin-left: 35px;
+      margin-bottom: 20px;
+  
+      &:hover {
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+      }
+  
+      a {
+        text-decoration: none;
+        color: #8d38c9;
+        font-weight: bold;
+      }
+    }
+  }
+  
+  @media screen and (min-width: 481px){
+    .mobile_menu, .bars, .mobile_button {
+      display: none;
+    }
+  }
